Changes in Html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         Hellooo Vengalarayudu
+        <input type="button" placeholder="Hey Rayudu"/>
     </body>
 </html>
